Fix: Link username in header to profile.html

--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -109,11 +109,11 @@
 
                     <!-- 🔐 ĐÃ LOGIN -->
                     <div id="userNav" class="hidden flex items-center space-x-3 text-white">
-                        <div class="flex items-center space-x-2 cursor-pointer hover:opacity-90">
+                        <a href="profile.html" class="flex items-center space-x-2 cursor-pointer hover:opacity-90">
                             <img src="https://ui-avatars.com/api/?name=User&background=fff&color=f97316"
                                 class="w-6 h-6 rounded-full border border-white" id="userAvatar">
                             <span id="userName" class="font-semibold">User</span>
-                        </div>
+                        </a>
 
                         <button onclick="logout()" title="Logout" class="text-white hover:text-red-200 transition ml-2">
                             <i class="fas fa-sign-out-alt"></i>
