feat(frontend): Auto-redirect Admins to Dashboard and show Admin Panel link

--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -145,7 +145,17 @@
                 if (response.ok) {
                     localStorage.setItem('accessToken', data.accessToken);
                     localStorage.setItem('userName', data.user?.fullName || email.split('@')[0]);
-                    window.location.href = '/index.html';
+
+                    // Store roles if available in response, or just check immediately
+                    // Assuming data.user.roles is a Set/List of strings or objects
+                    const roles = data.user?.roles || [];
+                    const isAdmin = roles.some(r => (typeof r === 'string' ? r : r.name) === 'ROLE_ADMIN');
+
+                    if (isAdmin) {
+                        window.location.href = 'admin-dashboard.html';
+                    } else {
+                        window.location.href = 'index.html';
+                    }
                 } else {
                     alert('❌ ' + (data.message || 'Login failed'));
                 }
