--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -113,6 +113,12 @@
                         Seller Channel
                     </a>
 
+                    <!-- Link Admin Panel -->
+                    <a href="admin-dashboard.html" id="adminPanelLink"
+                        class="text-white hover:text-orange-100 text-sm font-bold mr-4 transition hidden">
+                        [ADMIN PANEL]
+                    </a>
+
                     <!-- 🔐 ĐÃ LOGIN -->
                     <div id="userNav" class="hidden flex items-center space-x-3 text-white">
                         <a href="profile.html" class="flex items-center space-x-2 cursor-pointer hover:opacity-90">
@@ -714,6 +720,9 @@
         /* ===============================
            2️⃣ UPDATE NAVBAR (CỐT LÕI)
         ================================ */
+        /* ===============================
+           2️⃣ UPDATE NAVBAR (CỐT LÕI)
+        ================================ */
         function updateNavbar() {
             const token = localStorage.getItem('accessToken');
             const userName = localStorage.getItem('userName') || 'User';
@@ -722,6 +731,9 @@
             const userNav = document.getElementById('userNav');
             const userNameEl = document.getElementById('userName');
             const userAvatar = document.getElementById('userAvatar');
+
+            const sellerLink = document.getElementById('sellerChannelLink');
+            const adminLink = document.getElementById('adminPanelLink');
 
             if (token) {
                 guestNav.classList.add('hidden');
@@ -732,14 +744,38 @@
                 }
 
                 // Show Seller Channel link
-                const sellerLink = document.getElementById('sellerChannelLink');
                 if (sellerLink) sellerLink.classList.remove('hidden');
+
+                // Check for Admin Role via JWT Decode (Simple version)
+                try {
+                    const payload = JSON.parse(atob(token.split('.')[1]));
+                    // Roles usually in "roles" or "scope" or "authorities"
+                    // Adjust based on your JWT structure. Assuming standard Spring Security structure?
+                    // Or we can just blindly show it if the user IS logged in for now, OR rely on a more robust check?
+                    // Let's print payload to console for debugging if needed, but for now check for 'ADMIN' string in token text if lazy, 
+                    // or better: 
+                    const roles = payload.roles || []; // Assuming backend puts roles here
+                    // If roles is array of strings:
+                    if (Array.isArray(roles) && roles.includes("ROLE_ADMIN")) {
+                        if (adminLink) adminLink.classList.remove('hidden');
+                    }
+                    // If roles is string (e.g. "ROLE_USER,ROLE_ADMIN")
+                    else if (typeof roles === 'string' && roles.includes("ROLE_ADMIN")) {
+                        if (adminLink) adminLink.classList.remove('hidden');
+                    }
+                    // If roles is array of objects {authority: "ROLE_ADMIN"}
+                    else if (Array.isArray(roles) && roles.some(r => r.authority === 'ROLE_ADMIN' || r.name === 'ROLE_ADMIN')) {
+                        if (adminLink) adminLink.classList.remove('hidden');
+                    }
+                } catch (e) {
+                    console.error("Error parsing token roles", e);
+                }
 
             } else {
                 guestNav.classList.remove('hidden');
                 userNav.classList.add('hidden');
-                const sellerLink = document.getElementById('sellerChannelLink');
                 if (sellerLink) sellerLink.classList.add('hidden');
+                if (adminLink) adminLink.classList.add('hidden');
             }
         }
 
