--- a/src/Frontend/admin-dashboard.html
+++ b/src/Frontend/admin-dashboard.html
@@ -456,6 +456,51 @@
         </main>
     </div>
 
+    <!-- Edit User Modal -->
+    <div id="editUserModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 m-4">
+            <div class="flex justify-between items-center mb-6">
+                <h3 class="text-xl font-bold text-gray-800">Edit User</h3>
+                <button onclick="closeEditModal()" class="text-gray-400 hover:text-gray-600 transition">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+
+            <form id="editUserForm" class="space-y-4">
+                <input type="hidden" id="editUserId">
+
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Full Name</label>
+                    <input type="text" id="editFullName" required
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none">
+                </div>
+
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Email</label>
+                    <input type="email" id="editEmail" required
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none">
+                </div>
+
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Phone</label>
+                    <input type="tel" id="editPhone"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none">
+                </div>
+
+                <div class="flex gap-3 pt-4">
+                    <button type="submit"
+                        class="flex-1 bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition">
+                        Save Changes
+                    </button>
+                    <button type="button" onclick="closeEditModal()"
+                        class="flex-1 bg-gray-200 text-gray-700 py-2 rounded-lg font-bold hover:bg-gray-300 transition">
+                        Cancel
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <!-- MAIN SCRIPT -->
     <script>
         const token = localStorage.getItem('accessToken');
@@ -745,13 +790,30 @@
                         </span>
                     </td>
                     <td class="px-6 py-4 text-right">
-                         ${!roles.includes('ROLE_ADMIN') ? `
-                            <button onclick="toggleUserLock('${user.id}', ${active})" 
-                                class="${active ? 'text-red-500 hover:bg-red-50' : 'text-green-600 hover:bg-green-50'} p-2 rounded-lg transition" 
-                                title="${active ? 'Lock User' : 'Unlock User'}">
-                                <i class="fas ${active ? 'fa-lock' : 'fa-lock-open'}"></i>
+                        <div class="flex items-center justify-end gap-2">
+                            <!-- Edit Button -->
+                            <button onclick="openEditModal('${user.id}')" 
+                                class="text-blue-500 hover:bg-blue-50 p-2 rounded-lg transition" 
+                                title="Edit User">
+                                <i class="fas fa-edit"></i>
                             </button>
-                         ` : '<span class="text-gray-400 text-xs italic">Admin</span>'}
+                            
+                            ${!roles.includes('ROLE_ADMIN') ? `
+                                <!-- Delete Button -->
+                                <button onclick="deleteUser('${user.id}')" 
+                                    class="text-red-500 hover:bg-red-50 p-2 rounded-lg transition" 
+                                    title="Delete User">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                                
+                                <!-- Lock/Unlock Button -->
+                                <button onclick="toggleUserLock('${user.id}', ${active})" 
+                                    class="text-gray-500 hover:bg-gray-50 p-2 rounded-lg transition" 
+                                    title="${active ? 'Lock User' : 'Unlock User'}">
+                                    <i class="fas ${active ? 'fa-lock' : 'fa-lock-open'}"></i>
+                                </button>
+                            ` : '<span class="text-gray-400 text-xs italic ml-2">Admin</span>'}
+                        </div>
                     </td>
                 </tr>
             `}).join('');
@@ -793,6 +855,94 @@
             } catch (e) {
                 console.error(e);
                 showToast("Connection error", "error");
+            }
+        }
+
+        // --- EDIT USER FUNCTIONS ---
+        async function openEditModal(userId) {
+            try {
+                const response = await fetch(`http://localhost:8080/api/admin/users/${userId}`, {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (response.ok) {
+                    const user = await response.json();
+                    document.getElementById('editUserId').value = user.id;
+                    document.getElementById('editFullName').value = user.fullName || '';
+                    document.getElementById('editEmail').value = user.email;
+                    document.getElementById('editPhone').value = user.phone || '';
+                    document.getElementById('editUserModal').classList.remove('hidden');
+                } else {
+                    showToast('Failed to load user data', 'error');
+                }
+            } catch (e) {
+                console.error(e);
+                showToast('Connection error', 'error');
+            }
+        }
+
+        function closeEditModal() {
+            document.getElementById('editUserModal').classList.add('hidden');
+            document.getElementById('editUserForm').reset();
+        }
+
+        // Handle edit form submission
+        document.getElementById('editUserForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const userId = document.getElementById('editUserId').value;
+            const data = {
+                fullName: document.getElementById('editFullName').value,
+                email: document.getElementById('editEmail').value,
+                phone: document.getElementById('editPhone').value || null
+            };
+
+            try {
+                const response = await fetch(`http://localhost:8080/api/admin/users/${userId}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Authorization': `Bearer ${token}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
+
+                if (response.ok) {
+                    showToast('User updated successfully', 'success');
+                    closeEditModal();
+                    loadUsers(); // Refresh list
+                } else {
+                    const errorText = await response.text();
+                    showToast(`Update failed: ${errorText}`, 'error');
+                }
+            } catch (e) {
+                console.error(e);
+                showToast('Connection error', 'error');
+            }
+        });
+
+        // --- DELETE USER FUNCTION ---
+        async function deleteUser(userId) {
+            if (!confirm('Are you sure you want to delete this user? This action cannot be undone.')) {
+                return;
+            }
+
+            try {
+                const response = await fetch(`http://localhost:8080/api/admin/users/${userId}`, {
+                    method: 'DELETE',
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (response.ok) {
+                    showToast('User deleted successfully', 'success');
+                    loadUsers(); // Refresh list
+                } else {
+                    const errorText = await response.text();
+                    showToast(`Delete failed: ${errorText}`, 'error');
+                }
+            } catch (e) {
+                console.error(e);
+                showToast('Connection error', 'error');
             }
         }
     </script>
